Bug 256040 - activities switcher does not adapt to vertical layout
Summary: activities switcher does not adapt to vertical layout
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-activitybar (other bugs)
Version First Reported In: 4.8.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 301431 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-11-04 12:17 UTC by S. Burmeister
Modified: 2012-06-27 09:07 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:


Attachments
activity bar with activities aligned horizontally although vertical space is bigger. (54.33 KB, image/png)
2012-02-06 23:16 UTC, S. Burmeister
Details

Note You need to log in before you can comment on or make changes to this bug.
Description S. Burmeister 2010-11-04 12:17:52 UTC
Version:           unspecified (using KDE 4.5.2) 
OS:                Linux

If on resizes the activity switcher in such a way that not all activities fit on it horizontally but there would be enough space to arrange them vertically it does not do so.

For example three activities are arranged as follows:
------------------------
| Activity 1 | Acti... |
|                      |
|                      |
------------------------

Instead of:

------------------------
| Activity 1           |
| Activity 2           |
| Activity 3           |
------------------------

Reproducible: Always
Comment 1 Chani 2010-11-04 14:32:08 UTC
meep! it was only meant to be horizontal, originally. but I see how you managed to get at it from hte vertical thing... hrm, so I guess it needs to be made vertical-friendly now. damn.

...wait, 4.5? I thought you could only do that in trunk. huh.
well anyways, one of us will get it fixed before 4.6 is out :)
Comment 2 Marco Martin 2010-12-09 20:45:54 UTC
fixed in trunk
Comment 3 S. Burmeister 2012-02-06 23:15:38 UTC
Either not fixed or there is a regression in 4.8. See screenshot.

There would be plenty of space to align the activities vertically.
Comment 4 S. Burmeister 2012-02-06 23:16:58 UTC
Created attachment 68578 [details]
activity bar with activities aligned horizontally although vertical space is bigger.
Comment 5 Janek Bevendorff 2012-06-09 17:33:48 UTC
*** Bug 301431 has been marked as a duplicate of this bug. ***
Comment 6 Marco Martin 2012-06-27 09:07:30 UTC
Git commit 1469527c1dfc257f85e85da93e80df82744ea7b1 by Marco Martin.
Committed on 27/06/2012 at 11:01.
Pushed by mart into branch 'KDE/4.9'.

activitybar orientation dependent from size too
FIXED-IN:4.9

M  +11   -5    plasma/generic/applets/activitybar/activitybar.cpp

http://commits.kde.org/kde-workspace/1469527c1dfc257f85e85da93e80df82744ea7b1