activitybar orientation dependent from size too

BUG:256040
FIXED-IN:4.9